// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KendoArrayBaseComponent should handle dataStateChange 1`] = `
Object {
  "data": Array [
    Object {
      "id": 12,
    },
    Object {
      "id": 11,
    },
    Object {
      "id": 10,
    },
  ],
  "total": 19,
}
`;

exports[`KendoArrayBaseComponent should handle pageChange 1`] = `
Object {
  "data": Array [
    Object {
      "id": 2,
    },
    Object {
      "id": 3,
    },
  ],
  "total": 19,
}
`;

exports[`KendoArrayBaseComponent should handle sortChange 1`] = `
Object {
  "data": Array [
    Object {
      "id": 2,
    },
    Object {
      "id": 3,
    },
    Object {
      "id": 4,
    },
  ],
  "total": 19,
}
`;
